add tools to manage topics and queues

--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -4,3 +4,4 @@ python-dateutil>=2.1
 unittest2>=0.5.1
 # -e git+https://github.com/martinpaljak/M2Crypto.git#egg=M2Crypto
 M2Crypto>=0.22.3
+urllib3
